[package]
name = "PIDGraph"
version = "0.1.0"
edition = "2021"
authors = ["sn99 <siddharthn.099@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
wmi = {git = "https://github.com/sn99/wmi-rs"}
serde = "1.0.152"
chrono = "0.4.24"
petgraph = "0.6.3"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
